Add year-in-review tag

--- a/blog/_posts/2025-12-23-youtube-recap-2025.md
+++ b/blog/_posts/2025-12-23-youtube-recap-2025.md
@@ -9,7 +9,8 @@ mastodon_social_status_url: false
 bluesky_status_url: false
 tags:
 - data
-- YouTube
+- youtube
+- year-in-review
 serial_number: 2025.BLG.205
 ---
 My [2025 YouTube Recap](https://www.youtube.com/recap) was delivered today. It seems they calculate their "top" metrics based on minutes watched, not number of videos watched.
