Update neatocal.md with layout link
Added a link to a basic layout for neatocal.

--- a/notes/_posts/2026-01-02-neatocal.md
+++ b/notes/_posts/2026-01-02-neatocal.md
@@ -8,3 +8,5 @@ tags:
 serial_number: 2026.NTE.001
 ---
 [abetusk's neatocal](https://github.com/abetusk/neatocal) is a great little web app for generating a single page printable calendar. I use it for making things like habit trackers or year visualizations.
+
+[Here's my basic layout](https://abetusk.github.io/neatocal/?layout=hallon-almanackan&show_week_numbers=true).
