--- a/blog/working/_posts/2020-02-06-desk-february-2020.md
+++ b/blog/working/_posts/2020-02-06-desk-february-2020.md
@@ -15,3 +15,4 @@ serial_number: 2020.BLG.002
 
 I've been using the 'actual' desk at OfficeLuv in these dark winter days.
 
+This is my desk when the COVID-19 Pandemic hits. 
